deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: hello-kubernetes
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: hello-kubernetes
    spec:
      containers:
      - name: hello-kubernetes
        image: docker.io/paulbouwer/hello-kubernetes@sha256:2ad94733189b30844049caed7e17711bf11ed9d1116eaf10000586081451690b
        imagePullPolicy: IfNotPresent
        resources: {}
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
