route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-kubernetes
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: hello-kubernetes
    weight: 100
  wildcardPolicy: None
